re-enable drivenet utils, refactoring fixed linking errors

--- a/configure.ac
+++ b/configure.ac
@@ -293,8 +293,9 @@ CPPFLAGS="$CPPFLAGS -DHAVE_BUILD_INFO -D__STDC_FORMAT_MACROS"
 
 AC_ARG_WITH([utils],
   [AS_HELP_STRING([--with-utils],
-  [build drivenet-cli drivenet-tx (default=no)])],
-  [build_drivenet_utils=no])
+  [build drivenet-cli drivenet-tx (default=yes)])],
+  [build_drivenet_utils=$withval],
+  [build_drivenet_utils=yes])
 
 AC_ARG_WITH([libs],
   [AS_HELP_STRING([--with-libs],
