--- a/src/Makefile.qt.include
+++ b/src/Makefile.qt.include
@@ -293,6 +293,7 @@ RES_ICONS = \
   qt/res/icons/remove.png \
   qt/res/icons/send.png \
   qt/res/icons/sidechain_one.png \
+  qt/res/icons/sidechain_payments.png \
   qt/res/icons/synced.png \
   qt/res/icons/transaction0.png \
   qt/res/icons/transaction2.png \
