Add config generator & fix a few GUI bugs

--- a/src/Makefile.qt.include
+++ b/src/Makefile.qt.include
@@ -99,6 +99,7 @@ QT_FORMS_UI = \
   qt/forms/askpassphrasedialog.ui \
   qt/forms/coincontroldialog.ui \
   qt/forms/coinsplitdialog.ui \
+  qt/forms/confgeneratordialog.ui \
   qt/forms/editaddressdialog.ui \
   qt/forms/helpmessagedialog.ui \
   qt/forms/intro.ui \
@@ -129,6 +130,7 @@ QT_MOC_CPP = \
   qt/moc_coincontroldialog.cpp \
   qt/moc_coincontroltreewidget.cpp \
   qt/moc_coinsplitdialog.cpp \
+  qt/moc_confgeneratordialog.cpp \
   qt/moc_csvmodelwriter.cpp \
   qt/moc_editaddressdialog.cpp \
   qt/moc_guiutil.cpp \
@@ -202,6 +204,7 @@ DRIVENET_QT_H = \
   qt/coincontroldialog.h \
   qt/coincontroltreewidget.h \
   qt/coinsplitdialog.h \
+  qt/confgeneratordialog.h \
   qt/csvmodelwriter.h \
   qt/editaddressdialog.h \
   qt/guiconstants.h \
@@ -344,6 +347,7 @@ DRIVENET_QT_WALLET_CPP = \
   qt/coincontroldialog.cpp \
   qt/coincontroltreewidget.cpp \
   qt/coinsplitdialog.cpp \
+  qt/confgeneratordialog.cpp \
   qt/editaddressdialog.cpp \
   qt/openuridialog.cpp \
   qt/overviewpage.cpp \
