Add sidechain activation by voting
* Add sidechain activation consensus rules, update mempool, scdb,
    validation, wallet, init, UI (RPC mostly) for sidechain activation by vote.

* Add sidechain proposal & activation commitment script definitions

* Add sidechain activation cache & DAT files

* Add sidechain proposal & activation commitment optiosn to miner

* Add sidechain activation unit tests

* Add -activatesidechains command line param

* Show message on sidechain page when no sidechains are activated yet

* Add basic sidechain activation RPC functions

* Update title & app name DriveNetTESTDRIVE -> DriveNet

* Update README file and other text DriveNetTESTDRIVE -> DriveNet

--- a/src/Makefile.qt.include
+++ b/src/Makefile.qt.include
@@ -295,6 +295,7 @@ RES_ICONS = \
   qt/res/icons/receive.png \
   qt/res/icons/remove.png \
   qt/res/icons/send.png \
+  qt/res/icons/sidechain_default.png \
   qt/res/icons/sidechain_one.png \
   qt/res/icons/sidechain_payments.png \
   qt/res/icons/synced.png \
