--- a/src/Makefile.test.include
+++ b/src/Makefile.test.include
@@ -72,6 +72,7 @@ DRIVENET_TESTS =\
   test/script_standard_tests.cpp \
   test/scriptnum_tests.cpp \
   test/serialize_tests.cpp \
+  test/sidechainactivation_tests.cpp \
   test/sidechaindb_tests.cpp \
   test/sighash_tests.cpp \
   test/sigopcount_tests.cpp \
