Update gitian build, glibc back compat, cleanup
Implemented a version of these pull requests
from upstream:
https://github.com/bitcoin/bitcoin/pull/13177
https://github.com/bitcoin/bitcoin/pull/13171

--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -371,6 +371,7 @@ libdrivenet_util_a_SOURCES = \
 
 if GLIBC_BACK_COMPAT
 libdrivenet_util_a_SOURCES += compat/glibc_compat.cpp
+AM_LDFLAGS += $(COMPAT_LDFLAGS)
 endif
 
 # cli: shared between drivenet-cli and drivenet-qt
