Sidechain page GUI improvements
* Add sidechain deposit confirmation dialog popup
* Add fee setting to the deposit GUI (not yet implemented by wallet)
* Cleanup sidechain page frames & tabs

--- a/src/Makefile.qt.include
+++ b/src/Makefile.qt.include
@@ -110,6 +110,7 @@ QT_FORMS_UI = \
   qt/forms/debugwindow.ui \
   qt/forms/sendcoinsdialog.ui \
   qt/forms/sendcoinsentry.ui \
+  qt/forms/sidechaindepositconfirmationdialog.ui \
   qt/forms/sidechaintabledialog.ui \
   qt/forms/sidechainminerdialog.ui \
   qt/forms/sidechainpage.ui \
@@ -153,6 +154,7 @@ QT_MOC_CPP = \
   qt/moc_sendcoinsentry.cpp \
   qt/moc_sidechainactivationtablemodel.cpp \
   qt/moc_sidechaintabledialog.cpp \
+  qt/moc_sidechaindepositconfirmationdialog.cpp \
   qt/moc_sidechainescrowtablemodel.cpp \
   qt/moc_sidechainminerdialog.cpp \
   qt/moc_sidechainpage.cpp \
@@ -231,6 +233,7 @@ DRIVENET_QT_H = \
   qt/sendcoinsdialog.h \
   qt/sendcoinsentry.h \
   qt/sidechainactivationtablemodel.h \
+  qt/sidechaindepositconfirmationdialog.h \
   qt/sidechaintabledialog.h \
   qt/sidechainescrowtablemodel.h \
   qt/sidechainminerdialog.h \
@@ -403,6 +406,7 @@ DRIVENET_QT_WALLET_CPP = \
   qt/sendcoinsdialog.cpp \
   qt/sendcoinsentry.cpp \
   qt/sidechainactivationtablemodel.cpp \
+  qt/sidechaindepositconfirmationdialog.cpp \
   qt/sidechainescrowtablemodel.cpp \
   qt/sidechaintabledialog.cpp \
   qt/sidechainminerdialog.cpp \
